[gd_scene load_steps=4 format=3 uid="uid://bqnxqxq8yvdqw"]

[ext_resource type="Script" uid="uid://d133ipyfi8llk" path="res://scripts/game/effects/visuals/buff_visual.gd" id="1_yvnqw"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_uxvs8"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 20.0
direction = Vector3(0, -1, 0)
spread = 30.0
initial_velocity_min = 20.0
initial_velocity_max = 40.0
gravity = Vector3(0, 0, 0)
scale_min = 2.0
scale_max = 4.0
color = Color(0, 0.8, 0.8, 0.8)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_lfgxj"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 30.0
direction = Vector3(0, 0, 0)
spread = 180.0
initial_velocity_min = 5.0
initial_velocity_max = 10.0
orbit_velocity_min = 0.1
orbit_velocity_max = 0.2
gravity = Vector3(0, 0, 0)
scale_max = 2.0
color = Color(0, 0.8, 0.8, 0.5)

[node name="BuffVisual" type="Node2D"]
script = ExtResource("1_yvnqw")

[node name="BuffParticles" type="GPUParticles2D" parent="."]
emitting = false
amount = 16
process_material = SubResource("ParticleProcessMaterial_uxvs8")
lifetime = 1.0
one_shot = false
explosiveness = 0.2
randomness = 0.5

[node name="GlowParticles" type="GPUParticles2D" parent="."]
emitting = false
amount = 8
process_material = SubResource("ParticleProcessMaterial_lfgxj")
lifetime = 1.5
one_shot = false
randomness = 0.3
